--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "alertify": "^0.3.0",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.4.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.13.1",
     "ng2-bootstrap": "^1.1.16-10",
     "primeng": "^1.0.0-rc.3",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2",
-    "lodash": "^4.13.1"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
