--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "lodash": "^4.13.1",
     "ng2-bootstrap": "^1.1.16-10",
+    "ng2-webstorage": "^1.5.0",
     "primeng": "^1.0.0-rc.3",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
